src/PclSharp/Std/VectorOfXYZL.generated.cs

// Code generated by a template
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;
using System.Numerics;
using PclSharp.Struct;


namespace PclSharp.Std
{
	public static partial class Invoke
	{
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzl_ctor();
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzl_ctor_count(int count);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_delete(ref IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_at(IntPtr ptr,  UIntPtr idx, ref PointXYZL value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern UIntPtr std_vector_xyzl_size(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_clear(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_resize(IntPtr ptr, int size);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_add(IntPtr ptr, PointXYZL value);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern IntPtr std_vector_xyzl_data(IntPtr ptr);
		[DllImport(Native.DllName, CallingConvention=Native.CallingConvention)]
		public static extern void std_vector_xyzl_insert(IntPtr ptr, IntPtr idx, PointXYZL value);
	}

	public unsafe class VectorOfXYZL : Vector<PointXYZL>
	{	
		private bool _suppressDispose;

		public override int Count => (int)Invoke.std_vector_xyzl_size(_ptr);
		public IntPtr Data => Invoke.std_vector_xyzl_data(_ptr);
		public PointXYZL* DataU => (PointXYZL*)Data;

		public VectorOfXYZL()
		{
			_ptr = Invoke.std_vector_xyzl_ctor();
		}

		public VectorOfXYZL(int count)
		{
			_ptr = Invoke.std_vector_xyzl_ctor_count(count);
		}

		/// <summary>
        /// construct as a copy of the list
        /// </summary>
        /// <param name="list"></param>
		public VectorOfXYZL(List<PointXYZL> list)
        {
            var arr = list.ToArray();
            _ptr = Invoke.std_vector_xyzl_ctor_count(arr.Length);
            
            var dptr = (PointXYZL*)Data;
            for(var i = 0; i < arr.Length; i++)
                dptr[i] = arr[i];
        }

		internal VectorOfXYZL(IntPtr ptr)
		{
			_suppressDispose = true;
			_ptr = ptr;
		}

		public override void At(int idx, ref PointXYZL value)
		{
			Invoke.std_vector_xyzl_at(_ptr, (UIntPtr)idx, ref value);
		}

		public override PointXYZL this[int idx]
        {
            get { return DataU[idx]; }
			set { DataU[idx] = value; }
		}

		public override void Resize(int size)
			=> Invoke.std_vector_xyzl_resize(_ptr, size);

		public override void Add(PointXYZL value)
			=> Invoke.std_vector_xyzl_add(_ptr, value);

		public override void CopyTo(PointXYZL[] arr, int idx)
		{
            fixed (PointXYZL* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(PointXYZL) * Count));
            }
		}

		public override PointXYZL[] ToArray()
		{
			var arr = new PointXYZL[Count];
            fixed (PointXYZL* aptr = arr)
            {
                Unsafe.CopyBlockUnaligned(aptr, DataU, (uint)(sizeof(PointXYZL) * arr.Length));
            }

			return arr;
		}

		public override void Clear() => Invoke.std_vector_xyzl_clear(_ptr);

		public override void Insert(int index, PointXYZL item)
			=> Invoke.std_vector_xyzl_insert(_ptr, (IntPtr)index, item);

		public override IEnumerator<PointXYZL> GetEnumerator()
		{
			var count = Count;
			for(var i = 0; i < count; i++)
				yield return this[i];
		}

		protected override void DisposeObject()
		{
			if (_suppressDispose)
				return;
			Invoke.std_vector_xyzl_delete(ref _ptr);
		}
	}
}
